tests/predator-regre/test-0047.err
test-0047.c:19:29: error: invalid dereference
test-0047.c:35:20: note: from call of insert_item()
test-0047.c:29:5: note: from call of main()
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0000.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0001.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0002.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0003.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0004.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0005.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0006.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0007.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0008.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0009.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0010.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0011.dot'...
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0012.dot'...
test-0047.c:34:5: warning: memory leak detected while destroying a variable on stack
test-0047.c:36:24: note: writing heap graph to 'snapshot-01-0013.dot'...
